[tool.poetry]
name = "nanda_arch"
version = "1.0.0"
description = ""
authors = ["jeffers <jeffersonlima5286@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["all"], version = "^0.116.0"}
tortoise-orm = "^0.25.1"
aerich = "^0.9.1"
typer = "^0.16.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = "^1.7.4"
bcrypt = "^4.3.0"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nanda = "nanda_arch.backends.cli:app"